--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,211 +1,147 @@
-body{
-    // width: 100vw;
-    // min-height: 100vh;
-    background-color: #284C65;
-    color: #284C65;
+@import '../../variables.scss';
+
+div.about-page{
+    color: $sca-dark-blue;
+    
+    h1#about {
+        font-family: $accent !important;
+        font-size: 3rem;
+        font-weight: 700;
+        color: $sca-pink;
+    }
 
     main{
-        color: #284C65;
-
-    div.section{
-        display: flex;
-        font-size: 1px;
-        height: 5px;
-        color: aliceblue;
-        background-color: aliceblue;
-        margin-bottom: 35px;
+        color: $sca-dark-blue;
+        
+        .custom-container {
+            display: grid;
+            grid-template-rows: repeat(4, 1fr);
+            grid-gap: 10px;
         }
+        
     }
 
 
-h1 {
-    font-family: 'Berkshire Swash', cursive;
-    font-size: 80px;
-    font-weight: 700;
-    margin-right: 90%;
-    color: #FEC1AE;
-    text-shadow: white;
-    text-decoration: underline;
-}
-
 #intro {
-//    height: 100px;
-//    width: 100px;
-    background-color: #284C65;
-    color: white;
+    background-color: $sca-dark-blue;
+    color: $sca-gray;
     font-size: 20px;
     border-radius: 50%;
 }
 
-div.us{
-    font-family: 'Mali', cursive;
-    font-weight: bold;
-}
-div.pics {
-    align-self: flex-end;
-    height: 100px;
-    width:100px;
-    margin-bottom: 15px;
-    border-radius: 50%;
-    background-color: green;
-    // display: inline-block;
-}
-span.abouts {
-    text-decoration: underline;
-   
-}
-#Sam {
-    font-size: 23px;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    background-color: #FEC1AE;
-    width: 40%;
-    padding: 30px;
-    img {
-        height: 85px;
-        width: 85px;
-        border-radius: 50%;
-        margin-top: 10px;
+    div.us{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: $sans-serif;
+        font-weight: bold;
+        background-color: $sca-pink;
+        padding: 0.5rem;
+        border: 0.5rem solid $sca-dark-blue;
 
+        span.abouts {
+            text-decoration: none;
+            font-size: 2rem;
         }
-}
 
-#Jaime {
-    font-size: 23px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 60%;
-    background-color: #FEC1AE;
-    width: 40%;
-    padding: 30px;
-    img {
-        height: 85px;
-        width: 85px;
-        border-radius: 50%;
-        margin-top: 10px;
-
+        p {
+            font-weight: normal;
+            width: 80%;
+            text-align: justify;
         }
-}
 
-#Kim {
-    font-size: 23px;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-between;
-    background-color: #FEC1AE;
-    width: 40%;
-    padding: 30px;
-    img {
-        height: 85px;
-        width: 85px;
-        border-radius: 50%;
-        margin-top: 10px;
+        img {
+            height: 85px;
+            width: 85px;
+            border-radius: 50%;
+            margin-top: 10px;
+            border: 3px solid $sca-dark-blue;
+            }
 
+        #Sam {
+            font-size: 23px;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+            padding: 30px;
+            grid-row: 1;
         }
-}
-#Q {
-    font-family: 'Mali', cursive;
-    font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 60%;
-    background-color: #FEC1AE;
-    width: 40%;
-    padding: 30px;
-    img {
-        height: 85px;
-        width: 85px;
-        border-radius: 50%;
-        margin-top: 10px;
 
+        #Jaime {
+            font-size: 23px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 30px;
+            grid-row: 2;
         }
+
+        #Kim {
+            font-size: 23px;
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+            padding: 30px;
+            grid-row: 3;
+        }
+        #Q {
+            font-size: 25px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            background-color: $sca-pink;
+            padding: 30px;
+            grid-row: 1;
+            }
     }
 }
- @media(min-width: 700px) {
+
+ @media(min-width: 768px) {
    
 h1 {
     margin-left: 0%;
     margin-right: 90%;
 }
     .custom-container{
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        // align-items: stretch;
-        // grid-template-columns: 3;
-        // grid-template-rows: 3;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         width: 100%;
-
-
-            div.pairs {
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                // align-items: center;
-                justify-content: space-between;
-                width: 50%;
-
-            }
-            // div.quote {
-            //     grid-row: 1;
-            //     grid-column: 1/3;
-            // }
+        grid-gap: 10px;
 
     div.us {
-        // justify-self: left;
         width: cover;
         height: cover;
+        #Q{
+            grid-column: 2;
+            grid-row: 1;
+        }
+        
+        #Jaime{
+            grid-column: 2;
+            grid-row: 1;
+        }
+        #Kim{
+            grid-column: 1;
+            grid-row: 1;
+        }
+    
+        #Sam{
+            grid-column: 2;
+            grid-row: 2;
+        }
     }
+
     div.pics {
         margin-bottom: 25px;
         margin: 30px;
         
     }
-        #Q{
-            margin: auto;
-            margin-left: 50px;
-            width: 80%;
-            // padding-top: 55px;
-        }
-            // position: relative;
-            // margin-left: 20px;
-            // display: flex;
-
-            // margin-bottom: 60px;
-
-        
-        #Jaime{
-            // position: relative;
-            margin: auto;
-            width: 90%;
-
-        }
-        #Kim{
-            // position: relative;
-            margin: auto;
-            margin-left: 40px;
-            width: 80%;
-            padding-bottom: -45px;
-        }
-
-        #Sam{
-            // position: relative;
-            margin: auto;
-            width: 90%;
-            // padding-bottom: 10px;
-            margin-bottom: 40px;
-        }
-
-    // }
     .quote {
         font-family: 'Norican', cursive;
-        color: #FEC1AE;
+        color: $sca-pink;
         font-size: 50px;
-        background-color: #284C65;
+        background-color: $sca-dark-blue;
         margin-left: 20px;
         height: 40%;
         }
