--- a/src/Components/Quote/Quote.scss
+++ b/src/Components/Quote/Quote.scss
@@ -4,7 +4,6 @@
     color: $sca-gray;
     text-align: left;
     display: flex;
-    max-width: 600px;
     align-self: center;
     margin: 1rem;
     font-size: 1.5rem;
