--- a/src/Components/WishList/WishList.scss
+++ b/src/Components/WishList/WishList.scss
@@ -4,7 +4,7 @@
 	background-color: $sca-pink;
 	margin: 20px;
 	padding: 10px;
-	font-family: 'Ovo', serif;
+	font-family: $serif;
 	border-radius: 5px;
 
 	.page-title {
